Custody done, begin Sell

--- a/pset7/pset7/css/styles.css
+++ b/pset7/pset7/css/styles.css
@@ -53,10 +53,21 @@ table
 {
     margin-left: auto;
     margin-right: auto;
+    border-collapse: collapse;
+    width: 80%;
 }
 
 /* eliminate borders around table cells */
-td
+td, th
 {
     border: 0;
+    /* border: 2px solid #155dc9; */
+    /* text-align: right; */
+    padding: 5px;
 }
+
+/* striped table rows */
+/* tr:nth-child(even)
+{
+    background-color: #5f5d5d;
+} */
